# Project-Voxel

./: .gitignore  Libs.cmake  README.md  brun.sh  build.sh  buildWin.sh  compile_commands.json  meson.build  shaders.sh  vcpkg.json
assets/shaders/: g.frag.spv  g.vert.spv  l.frag.spv  l.vert.spv  rect.vert.spv
cross/: mingw64.ini
root/app/src/: main.cpp
root/core/inc/: types.h
root/core/inc/log/: log.hpp
root/core/inc/render/: camera.hpp  context.hpp  core.hpp  graphics.hpp  mesh.hpp  obj.hpp  renderer.hpp  skybox.hpp  texture.hpp
root/core/src/: LLGraphics.cpp  graphics.cpp
root/core/src/render/: LLGraphics.cpp  LLObject.cpp  ctx.cpp  graphics.cpp  libs.cpp  object.cpp
root/core/src/render/low/: mesh.cpp  objMTS.cpp  texture.cpp
shaders/: g.slang  l.slang  rect.slang  rect.vert.spv
subprojects/glm-1.0.1/: .meson-subproject-wrap-hash.txt
